--- a/templates/editcomment.html
+++ b/templates/editcomment.html
@@ -19,8 +19,8 @@
 		<div class="panel-footer footer-style">
 			<form method="post" action="/editcomment/{{p.key().id()}}/{{comment.key().id()}}" class="form-style">
 				<input type="text" name="content" value="{{comment.content.replace('\n', '<br>')}}"></textarea><br>
-				<button type="submit" class="btn btn-default btn-primary btn-md btnstyle">Edit</button>
-				<a type="submit" class="btn btn-default btn-primary btn-md" href="/blog">Cancel</a>
+				<button type="submit" class="btn btn-default btn-primary btn-md btnstyle element-margin">Edit</button>
+				<a type="submit" class="btn btn-default btn-primary btn-md element-margin" href="/blog">Cancel</a>
 			</form>
 		</div>
 	</div>
